<resources>
    <string name="app_name">MovieMatcher</string>
    <string name="title_activity_movie_matcher_main">MovieMatcherMain</string>
    <string name="title_home">Player</string>
    <string name="title_dashboard">Movies</string>
    <string name="title_notifications">Matches</string>
    <string name="New_Account"><u>Create a new Account</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="menu_addFriend">Add</string>
    <string name="menu_backFriend">Back</string>
    <string name="Add_a_Friend">Add a Friend</string>
    <string name="Search">Search</string>
    <string name="user_can_not_add_himself">User can not add himself</string>
    <string name="user_already_exist">User already exist</string>
    <string name="user_not_in_list">User does not exist</string>
    <string name="all_movies_watched">All Movies Watched</string>
    <string name="ImdB">ImdB:</string>
    <string name="Create_new_User">Create new User</string>
    <string name="username_OR_password_wrong">Username or Password wrong</string>
    <string name="please_enter_username">"Please enter username "</string>
    <string name="please_enter_password">please_enter_password</string>
    <string name="username_or_password_empty">username or password empty</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_name">"Please enter name "</string>
    <string name="all_movies_played">All Movies Played</string>
    <string name="matches_with_friend">Matches with </string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="EMail">E-Mail</string>
    <string name="Password">Password</string>
    <string name="create">Create</string>
    <string name="Add_a_Profil_Picture">Add a Profil Picture</string>
    <string name="Old_Password">Old Password</string>
    <string name="New_Password">New Password</string>
    <string name="Change_your_Password">Change your Password:</string>


</resources>