<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <EditText
        android:id="@+id/email"
        android:layout_width="308dp"
        android:layout_height="74dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/EMail"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />


    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="307dp"
        android:layout_height="85dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/Password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="141dp"
        android:layout_height="74dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/darkgreen"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/newAccount"
        android:layout_width="422dp"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/New_Account"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartButton"
        app:layout_constraintVertical_bias="0.325" />

</androidx.constraintlayout.widget.ConstraintLayout>